Initial commit: Puzzle game with drag and drop functionality

--- a/index.html
+++ b/index.html
@@ -41,146 +41,6 @@
     <canvas id="board" width="450" height="450"></canvas>
     <div id="sidebar"></div>
   </div>
-  <script>
-    const canvas = document.getElementById("board");
-    const ctx = canvas.getContext("2d");
-    const UNIT = 10;
-    let pieces = [];
-
-    const colors = [
-      { name: "LightBlue", color: "#ADD8E6", size: 9 },
-      { name: "Brown", color: "#8B4513", size: 8 },
-      { name: "Yellow", color: "#FFFF00", size: 7 },
-      { name: "MidBlue", color: "#1c8cd1", size: 6 },
-      { name: "Pink", color: "#8b0037", size: 5 },
-      { name: "DarkBlue", color: "#00008B", size: 4 },
-      { name: "Orange", color: "#FFA500", size: 3 },
-      { name: "Green", color: "#008000", size: 2 },
-    ];
-
-    const sidebar = document.getElementById("sidebar");
-    let dragging = null;
-
-    // Create sidebar buttons
-    colors.forEach(({ color, size }) => {
-      const btn = document.createElement("div");
-      btn.style.width = `${size * UNIT}px`;
-      btn.style.height = `${size * UNIT}px`;
-      btn.style.background = color;
-      btn.style.border = "1px solid #333";
-      btn.style.cursor = "grab";
-      btn.draggable = true;
-
-      btn.addEventListener("dragstart", (e) => {
-        dragging = { color, size };
-      });
-
-      sidebar.appendChild(btn);
-    });
-
-    // Canvas drop handling
-    canvas.addEventListener("dragover", (e) => e.preventDefault());
-    canvas.addEventListener("drop", (e) => {
-      const rect = canvas.getBoundingClientRect();
-      const x = Math.floor((e.clientX - rect.left) / UNIT) * UNIT;
-      const y = Math.floor((e.clientY - rect.top) / UNIT) * UNIT;
-
-      if (dragging) {
-        pieces.push({ x, y, size: dragging.size, color: dragging.color });
-        dragging = null;
-      }
-    });
-
-    // Drawing function
-    function draw() {
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
-
-      // Draw gridlines
-      ctx.strokeStyle = "#ccc";
-      for (let i = 0; i <= 450; i += UNIT) {
-        ctx.beginPath();
-        ctx.moveTo(i, 0);
-        ctx.lineTo(i, 450);
-        ctx.stroke();
-        ctx.beginPath();
-        ctx.moveTo(0, i);
-        ctx.lineTo(450, i);
-        ctx.stroke();
-      }
-
-      // Draw board pieces
-      pieces.forEach((p) => {
-        ctx.fillStyle = p.color;
-        ctx.fillRect(p.x, p.y, p.size * UNIT, p.size * UNIT);
-        ctx.strokeStyle = "#000";
-        ctx.strokeRect(p.x, p.y, p.size * UNIT, p.size * UNIT);
-      });
-
-      // Draw currently dragged piece (if moving within board)
-      if (dragging && dragging.onBoardIndex != null) {
-        ctx.fillStyle = dragging.color;
-        ctx.fillRect(dragging.x, dragging.y, dragging.size * UNIT, dragging.size * UNIT);
-        ctx.strokeStyle = "#000";
-        ctx.strokeRect(dragging.x, dragging.y, dragging.size * UNIT, dragging.size * UNIT);
-      }
-
-      requestAnimationFrame(draw);
-    }
-    draw();
-
-    // Dragging logic
-    canvas.addEventListener("mousedown", (e) => {
-      const rect = canvas.getBoundingClientRect();
-      const mouseX = e.clientX - rect.left;
-      const mouseY = e.clientY - rect.top;
-
-      for (let i = pieces.length - 1; i >= 0; i--) {
-        const p = pieces[i];
-        if (
-          mouseX >= p.x &&
-          mouseX < p.x + p.size * UNIT &&
-          mouseY >= p.y &&
-          mouseY < p.y + p.size * UNIT
-        ) {
-          dragging = {
-            ...p,
-            onBoardIndex: i,
-            offsetX: mouseX - p.x,
-            offsetY: mouseY - p.y,
-          };
-          pieces.splice(i, 1);
-          break;
-        }
-      }
-    });
-
-    canvas.addEventListener("mousemove", (e) => {
-      if (dragging && dragging.onBoardIndex != null) {
-        const rect = canvas.getBoundingClientRect();
-        dragging.x = Math.floor((e.clientX - rect.left - dragging.offsetX) / UNIT) * UNIT;
-        dragging.y = Math.floor((e.clientY - rect.top - dragging.offsetY) / UNIT) * UNIT;
-      }
-    });
-
-    canvas.addEventListener("mouseup", () => {
-      if (dragging && dragging.onBoardIndex != null) {
-        const halfSize = (dragging.size * UNIT) / 2;
-        const centerX = dragging.x + halfSize;
-        const centerY = dragging.y + halfSize;
-
-        const isOutside =
-          centerX < 0 ||
-          centerX > canvas.width ||
-          centerY < 0 ||
-          centerY > canvas.height;
-
-        if (!isOutside) {
-          pieces.push(dragging);
-        }
-        // else do not push to discard it
-        dragging = null;
-      }
-    });
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
