--- a/index.html
+++ b/index.html
@@ -34,11 +34,52 @@
       flex-direction: column;
       gap: 10px;
     }
+
+    .controls {
+      margin-top: 10px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 10px;
+    }
+
+    .button-group {
+      display: flex;
+      gap: 10px;
+    }
+
+    button {
+      padding: 8px 16px;
+      cursor: pointer;
+      background: #4CAF50;
+      color: white;
+      border: none;
+      border-radius: 4px;
+    }
+
+    button:hover {
+      background: #45a049;
+    }
+
+    #statusMessage {
+      color: #666;
+      font-size: 14px;
+      min-height: 20px;
+    }
   </style>
 </head>
 <body>
   <div id="game">
-    <canvas id="board" width="450" height="450"></canvas>
+    <div>
+      <canvas id="board" width="450" height="450"></canvas>
+      <div class="controls">
+        <div class="button-group">
+          <button id="saveBtn">Save Board</button>
+          <button id="loadBtn">Load Board</button>
+        </div>
+        <div id="statusMessage"></div>
+      </div>
+    </div>
     <div id="sidebar"></div>
   </div>
   <script src="script.js"></script>
